--- a/Data_Cleaning_Tweets.ipynb
+++ b/Data_Cleaning_Tweets.ipynb
@@ -33,7 +33,7 @@
         "import pandas as pd\n",
         "df=pd.read_csv(r\"CovidVaccine.csv\",error_bad_lines=False)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -43,13 +43,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47c19d95-63f5-43ad-9cae-90223a023158"
+        "outputId": "93c73450-ad2d-4500-fef1-b6a26a54d158"
       },
       "source": [
         "import nltk\n",
         "nltk.download()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -301,7 +301,7 @@
         "import re\n",
         "\n",
         "# Reading emoji patterns which contains emoticons , symbols & pictographs, transport & map symbols , flags\n",
-        "emoji_pattern = re.compile(\"[\"\n",
+        "emojisCollection = re.compile(\"[\"\n",
         "                       u\"\\U0001F600-\\U0001F64F\"  \n",
         "                       u\"\\U0001F300-\\U0001F5FF\"  \n",
         "                       u\"\\U0001F680-\\U0001F6FF\"  \n",
@@ -309,9 +309,9 @@
         "                       u\"\\U00002702-\\U000027B0\"\n",
         "                       u\"\\U000024C2-\\U0001F251\"\n",
         "                       \"]+\", flags=re.UNICODE)\n",
-        "df['CleanedTweet'] = (df['TweetText'].str.lower().str.replace(r'[^\\w\\s]+', '').str.replace(emoji_pattern, '').str.strip())\n"
+        "df['CleanedTweet'] = (df['TweetText'].str.lower().str.replace(r'[^\\w\\s]+', '').str.replace(emojisCollection, '').str.strip())\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -322,13 +322,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 711
         },
-        "outputId": "72d23c78-64eb-4c8c-a942-d30f457bdaad"
+        "outputId": "b15b957b-ecca-48e9-9408-78ad1c016dc9"
       },
       "source": [
-        "frame=df[['TweetDate','TweetText','CleanedTweet','TweetAuthor','TweetLocation','TweetCountry','AllHashtags',]]\n",
-        "frame"
+        "dataFrame=df[['TweetDate','TweetText','CleanedTweet','TweetAuthor','TweetLocation','TweetCountry','AllHashtags',]]\n",
+        "dataFrame"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +497,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -516,7 +516,7 @@
         "    tokenWords = [i for i in tokensData if i.isalpha()]\n",
         "    return tokenWords"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
         "    lemmatizedList = [lemmatizer.lemmatize(item) for item in lemmatizeList]\n",
         "    return (lemmatizedList)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
         "    stemmedList = [stemming.stem(item) for item in stemmList]\n",
         "    return (stemmedList)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -568,7 +568,7 @@
         "    words = [item for item in stopList if not item in stopWordList]\n",
         "    return (words)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -583,7 +583,7 @@
         "    finalWords = ( \" \".join(cleanList))\n",
         "    return finalWords"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -593,9 +593,9 @@
       },
       "source": [
         "# Converting to lower case\n",
-        "frame['CleanedTweet'] = frame['CleanedTweet'].str.lower()\n"
+        "dataFrame['CleanedTweet'] = dataFrame['CleanedTweet'].str.lower()\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -604,26 +604,26 @@
         "id": "7a1Qn8tJ7ikp",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 966
+          "height": 759
         },
-        "outputId": "dcf6b982-4449-45c9-ee5e-d9ec9d0baa99"
+        "outputId": "8fd1647d-14c9-4da7-8dfc-d9cc5af85132"
       },
       "source": [
         "# Executing all the functions calls declared for processing the tweet text\n",
         "import re\n",
         "from nltk.corpus import stopwords\n",
         "\n",
-        "frame['CleanedTweet'] = frame.apply(tokenization, axis=1)\n",
-        "frame['CleanedTweet'] = frame.apply(lemmatize, axis=1)\n",
-        "frame['CleanedTweet'] = frame.apply(stemmData, axis=1)\n",
-        "frame['CleanedTweet'] = frame.apply(cleanStopWords, axis=1)\n",
-        "frame['CleanedTweet'] = frame.apply(joinTweets, axis=1)\n",
+        "dataFrame['CleanedTweet'] = dataFrame.apply(tokenization, axis=1)\n",
+        "dataFrame['CleanedTweet'] = dataFrame.apply(lemmatize, axis=1)\n",
+        "dataFrame['CleanedTweet'] = dataFrame.apply(stemmData, axis=1)\n",
+        "dataFrame['CleanedTweet'] = dataFrame.apply(cleanStopWords, axis=1)\n",
+        "dataFrame['CleanedTweet'] = dataFrame.apply(joinTweets, axis=1)\n",
         "\n",
         "\n",
         "\n",
-        "frame"
+        "dataFrame"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -802,9 +802,9 @@
         "id": "fAx0NOnd9WoQ"
       },
       "source": [
-        "frame.to_csv('ProcessedCovidVaccineReact.csv')"
+        "dataFrame.to_csv('ProcessedCovidVaccineReact.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     }
   ]
