--- a/Countries_Cities_Location.ipynb
+++ b/Countries_Cities_Location.ipynb
@@ -6,7 +6,7 @@
       "name": "Countries_Cities_Location.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMURx+f+VkgABdPALw79K/H",
+      "authorship_tag": "ABX9TyPhekbe+FTupcVkcCHyi3sM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "roJjkW8jvdFD",
-        "outputId": "8b7ceacc-cbe0-458c-ae9f-aea25d9e91a4"
+        "outputId": "efd1ba00-3709-4d57-cdea-d694f6356638"
       },
       "source": [
         "!pip install geopy"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,11 +65,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bGMvjwxRE-Pc",
-        "outputId": "6ecfe686-bc6e-4665-941e-ab405560af6f"
+        "id": "bGMvjwxRE-Pc"
       },
       "source": [
         "import numpy as np\n",
@@ -90,41 +86,13 @@
         "df['TweetLocation'] = df['TweetLocation'].replace(np.nan, 'Unknown', regex=True)\n",
         "df['TweetLocation']"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0            UnKnown\n",
-              "1       Huddersfield\n",
-              "2         Manchester\n",
-              "3            UnKnown\n",
-              "4            Chicago\n",
-              "            ...     \n",
-              "9995              uk\n",
-              "9996              uk\n",
-              "9997              uk\n",
-              "9998           Seoul\n",
-              "9999         UnKnown\n",
-              "Name: TweetLocation, Length: 10000, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KltxryHevizF",
-        "outputId": "ce6824cd-3ff8-4ef5-f5ea-c49b94f083cc"
+        "id": "KltxryHevizF"
       },
       "source": [
         "from functools import partial\n",
@@ -135,8 +103,6 @@
         "def checkCountry(city):\n",
         "  geolocator = Nominatim(user_agent=\"COVID-19 vaccination attitudes\")\n",
         "  geocode = partial(geolocator.geocode, language=\"en\")\n",
-        "  print(city)\n",
-        "\n",
         "  if city != \"Unknown\" and not re.match(r'^[_\\W]+$', city)  :\n",
         "    countries = geocode(city)\n",
         "    if countries is None:\n",
@@ -152,21 +118,8 @@
         "    \n",
         "countryList"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -194,19 +147,48 @@
       "source": [
         "dict_1=dict(zip(cities,countries))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-mdmXe-TJ-ev"
+        "id": "-mdmXe-TJ-ev",
+        "outputId": "16b48ac2-8723-4184-b214-46966f59c109",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "df['Country']=df['TweetLocation'].map(dict_1)"
+        "df['Country']=df['TweetLocation'].map(dict_1)\n",
+        "df['Country']"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0               Excetion Raised while retriving Country\n",
+              "1               Excetion Raised while retriving Country\n",
+              "2               Excetion Raised while retriving Country\n",
+              "3               Excetion Raised while retriving Country\n",
+              "4               Excetion Raised while retriving Country\n",
+              "                            ...                        \n",
+              "95              Excetion Raised while retriving Country\n",
+              "96              Excetion Raised while retriving Country\n",
+              "97              Excetion Raised while retriving Country\n",
+              "98              Excetion Raised while retriving Country\n",
+              "99    [Unknown, Unknown, Unknown, Unknown, Unknown, ...\n",
+              "Name: Country, Length: 100, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     }
   ]
 }
