--- a/Countries_Cities_Location.ipynb
+++ b/Countries_Cities_Location.ipynb
@@ -6,7 +6,7 @@
       "name": "Countries_Cities_Location.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPhekbe+FTupcVkcCHyi3sM",
+      "authorship_tag": "ABX9TyNUvW+0036ohlgF4BNimNSg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "roJjkW8jvdFD",
-        "outputId": "efd1ba00-3709-4d57-cdea-d694f6356638"
+        "outputId": "1135865d-ba7f-411a-fb13-296f8adaa255"
       },
       "source": [
         "!pip install geopy"
       ],
-      "execution_count": 11,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +65,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bGMvjwxRE-Pc"
+        "id": "bGMvjwxRE-Pc",
+        "outputId": "4e848fe7-dd8e-43a6-c698-f3d92fb86cfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -86,8 +90,46 @@
         "df['TweetLocation'] = df['TweetLocation'].replace(np.nan, 'Unknown', regex=True)\n",
         "df['TweetLocation']"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0                     San Antonio\n",
+              "1                         Unknown\n",
+              "2                         Unknown\n",
+              "3                          London\n",
+              "4                        Montreal\n",
+              "5                   United States\n",
+              "6                       Las Vegas\n",
+              "7                      Georgetown\n",
+              "8                        Portland\n",
+              "9                      Pittsburgh\n",
+              "10                        Unknown\n",
+              "11                      Gateshead\n",
+              "12                         Indore\n",
+              "13                        England\n",
+              "14                        Unknown\n",
+              "15                      Frankfort\n",
+              "16    Royaume-Uni. United Kingdom\n",
+              "17                         Canada\n",
+              "18                        Unknown\n",
+              "19                   Winter Haven\n",
+              "20                      Beckenham\n",
+              "21                        Unknown\n",
+              "22                         Orange\n",
+              "23                    District 13\n",
+              "24                     Washington\n",
+              "Name: TweetLocation, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -104,21 +146,20 @@
         "  geolocator = Nominatim(user_agent=\"COVID-19 vaccination attitudes\")\n",
         "  geocode = partial(geolocator.geocode, language=\"en\")\n",
         "  if city != \"Unknown\" and not re.match(r'^[_\\W]+$', city)  :\n",
-        "    countries = geocode(city)\n",
-        "    if countries is None:\n",
-        "      countryList.append(\"Unknown\") \n",
-        "    elif countries.find(\",\") != -1:\n",
-        "      country = str(countries).split(\",\")[-1]\n",
-        "      countryList.append(country)  \n",
+        "    countries = geocode(city)   \n",
+        "    if countries.find(\", \") != -1:      \n",
+        "      country = str(countries).split(\", \")[-1]\n",
+        "      countryList.append(country) \n",
+        "    elif countries is None:\n",
+        "      countryList.append(\"Unknown\")    \n",
         "    else:\n",
         "      countryList.append(countries)          \n",
         "  else:\n",
         "    countryList.append(\"Unknown\")\n",
         "    return countryList\n",
-        "    \n",
-        "countryList"
+        "    "
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -147,48 +188,20 @@
       "source": [
         "dict_1=dict(zip(cities,countries))"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-mdmXe-TJ-ev",
-        "outputId": "16b48ac2-8723-4184-b214-46966f59c109",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "-mdmXe-TJ-ev"
       },
       "source": [
         "df['Country']=df['TweetLocation'].map(dict_1)\n",
         "df['Country']"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0               Excetion Raised while retriving Country\n",
-              "1               Excetion Raised while retriving Country\n",
-              "2               Excetion Raised while retriving Country\n",
-              "3               Excetion Raised while retriving Country\n",
-              "4               Excetion Raised while retriving Country\n",
-              "                            ...                        \n",
-              "95              Excetion Raised while retriving Country\n",
-              "96              Excetion Raised while retriving Country\n",
-              "97              Excetion Raised while retriving Country\n",
-              "98              Excetion Raised while retriving Country\n",
-              "99    [Unknown, Unknown, Unknown, Unknown, Unknown, ...\n",
-              "Name: Country, Length: 100, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
