--- a/Countries_Cities_Location.ipynb
+++ b/Countries_Cities_Location.ipynb
@@ -6,7 +6,7 @@
       "name": "Countries_Cities_Location.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUvW+0036ohlgF4BNimNSg",
+      "authorship_tag": "ABX9TyN19RNo6X2V9elHHHNFVgSy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "roJjkW8jvdFD",
-        "outputId": "1135865d-ba7f-411a-fb13-296f8adaa255"
+        "outputId": "ef5f9ae0-abc3-44f5-ffcf-fc913ebb4422"
       },
       "source": [
         "!pip install geopy"
       ],
-      "execution_count": 36,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,10 +66,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bGMvjwxRE-Pc",
-        "outputId": "4e848fe7-dd8e-43a6-c698-f3d92fb86cfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2d8539d7-e792-4c0a-de8e-a8fe52ad58f3"
       },
       "source": [
         "import numpy as np\n",
@@ -90,7 +90,7 @@
         "df['TweetLocation'] = df['TweetLocation'].replace(np.nan, 'Unknown', regex=True)\n",
         "df['TweetLocation']"
       ],
-      "execution_count": 37,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +127,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 58
         }
       ]
     },
@@ -148,18 +148,18 @@
         "  if city != \"Unknown\" and not re.match(r'^[_\\W]+$', city)  :\n",
         "    countries = geocode(city)   \n",
         "    if countries.find(\", \") != -1:      \n",
-        "      country = str(countries).split(\", \")[-1]\n",
-        "      countryList.append(country) \n",
+        "      country = str(countries).split(\", \")[-1] \n",
         "    elif countries is None:\n",
-        "      countryList.append(\"Unknown\")    \n",
+        "      country = \"Unknown\"   \n",
         "    else:\n",
-        "      countryList.append(countries)          \n",
+        "      country = countries          \n",
         "  else:\n",
-        "    countryList.append(\"Unknown\")\n",
-        "    return countryList\n",
+        "    country = \"Unknown\"\n",
+        "  countryList.append(country)\n",
+        "  return countryList\n",
         "    "
       ],
-      "execution_count": 51,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -177,8 +177,36 @@
         "    except:\n",
         "        countries.append('Excetion Raised while retriving Country')"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "biXtpo4v9n2x",
+        "outputId": "fd5201cf-faa3-44f1-a933-072331d4cd32"
+      },
+      "source": [
+        "countryList"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Canada', 'Unknown', 'Unknown', 'Unknown', 'Unknown', 'Unknown', 'Unknown']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "code",
