--- a/Countries_Cities_Location.ipynb
+++ b/Countries_Cities_Location.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Countries_Cities_Location.ipynb",
+      "name": "Copy of Countries_Cities_Location.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZMFr87uSDKbU7zp0WBLGD",
+      "authorship_tag": "ABX9TyPbflDJ+iDIFh9YjZXp8TJr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "df=pd.read_csv(r\"CovidVaccine.csv\",error_bad_lines=False)\n",
         "df"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
       "source": [
         "!pip install geopy"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +392,7 @@
         "df['TweetLocation'] = df['TweetLocation'].replace(np.nan, 'Unknown', regex=True)\n",
         "df['TweetLocation']"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,9 +444,11 @@
         "import re\n",
         "\n",
         "countryList =[]\n",
+        "# Function to map the country for the corresponding city location\n",
         "def checkCountry(city):\n",
         "  geolocator = Nominatim(user_agent=\"COVID-19 vaccination attitudes\")\n",
         "  geocode = partial(geolocator.geocode, language=\"en\")\n",
+        "  # passing the city through geocode api to return the location if city is not unknow\n",
         "  if city != \"Unknown\" and not re.match(r'^[_\\W]+$', city)  :\n",
         "    location = geocode(city)   \n",
         "    if location.address.find(\", \") != -1:      \n",
@@ -454,25 +456,21 @@
         "    elif location is None:\n",
         "      country = \"Unknown\"   \n",
         "    else:\n",
-        "      country = location.address          \n",
+        "      country = location.address  \n",
+        "  # If city is not known then setting country as Unknown        \n",
         "  else:    \n",
-        "    country = \"Unknown\" \n",
-        "  print('City :', city , 'Country : ' , country)  \n",
+        "    country = \"Unknown\"   \n",
         "  return country\n",
         "\n",
         "    "
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "psdH_XDY5awp",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7ac59e34-5f32-4553-e0c9-453c5b5693cb"
+        "id": "psdH_XDY5awp"
       },
       "source": [
         "cities=[]\n",
@@ -484,92 +482,8 @@
         "    except:\n",
         "        countries.append('Excetion Raised while retriving Country')"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "City : San Antonio Country :  United States\n",
-            "City : Unknown Country :  Unknown\n",
-            "City : Unknown Country :  Unknown\n",
-            "City : London Country :  United Kingdom\n",
-            "City : Montreal Country :  Canada\n",
-            "City : United States Country :  United States\n",
-            "City : Las Vegas Country :  United States\n",
-            "City : Georgetown Country :  Guyana\n",
-            "City : Portland Country :  United States\n",
-            "City : Pittsburgh Country :  United States\n",
-            "City : Unknown Country :  Unknown\n",
-            "City : Gateshead Country :  United Kingdom\n",
-            "City : Indore Country :  India\n",
-            "City : England Country :  United Kingdom\n",
-            "City : Unknown Country :  Unknown\n",
-            "City : Frankfort Country :  Germany\n",
-            "City : Royaume-Uni. United Kingdom Country :  United Kingdom\n",
-            "City : Canada Country :  Canada\n",
-            "City : Unknown Country :  Unknown\n",
-            "City : Winter Haven Country :  United States\n",
-            "City : Beckenham Country :  United Kingdom\n",
-            "City : Unknown Country :  Unknown\n",
-            "City : Orange Country :  United States\n",
-            "City : District 13 Country :  Iran\n",
-            "City : Washington Country :  United States\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "biXtpo4v9n2x",
-        "outputId": "3265f0cb-cf15-429b-d0bf-3b61f1fd514b"
-      },
-      "source": [
-        "countries"
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['United States',\n",
-              " 'Unknown',\n",
-              " 'Unknown',\n",
-              " 'United Kingdom',\n",
-              " 'Canada',\n",
-              " 'United States',\n",
-              " 'United States',\n",
-              " 'Guyana',\n",
-              " 'United States',\n",
-              " 'United States',\n",
-              " 'Unknown',\n",
-              " 'United Kingdom',\n",
-              " 'India',\n",
-              " 'United Kingdom',\n",
-              " 'Unknown',\n",
-              " 'Germany',\n",
-              " 'United Kingdom',\n",
-              " 'Canada',\n",
-              " 'Unknown',\n",
-              " 'United States',\n",
-              " 'United Kingdom',\n",
-              " 'Unknown',\n",
-              " 'United States',\n",
-              " 'Iran',\n",
-              " 'United States']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -577,9 +491,10 @@
         "id": "ygkTlk-LJ9v0"
       },
       "source": [
+        "# Zipping city and corresponding country together\n",
         "dict_1=dict(zip(cities,countries))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,54 +502,198 @@
       "metadata": {
         "id": "-mdmXe-TJ-ev",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 691
         },
-        "outputId": "82d4b1eb-273f-4574-d571-ed84dc2c2285"
+        "outputId": "b02b0454-fe58-4b50-a3a4-4da09a4446e6"
       },
       "source": [
         "df['Country']=df['TweetLocation'].map(dict_1)\n",
-        "df['Country']"
+        "df"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>TweetDate</th>\n",
+              "      <th>TweetText</th>\n",
+              "      <th>TweetAuthor</th>\n",
+              "      <th>TweetLocation</th>\n",
+              "      <th>TweetCountry</th>\n",
+              "      <th>AllHashtags</th>\n",
+              "      <th>Country</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2021-03-16 17:04:39</td>\n",
+              "      <td>Immediately after a needle related panic attac...</td>\n",
+              "      <td>kstep38</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['CovidVaccine']</td>\n",
+              "      <td>Unknown</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2021-03-16 17:04:27</td>\n",
+              "      <td>Facebook is launching a new push to promote th...</td>\n",
+              "      <td>MikeMck84268</td>\n",
+              "      <td>Huddersfield</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>['Facebook', '100daysofcode', 'COVID19Vaccine'...</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2021-03-16 17:04:18</td>\n",
+              "      <td>Last Friday's Urdu Jumu'ah khutbah was also re...</td>\n",
+              "      <td>MakkiMasjid_Mcr</td>\n",
+              "      <td>Manchester</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>['COVID19', 'vaccine', 'Covid_19', 'CovidVacci...</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2021-03-16 17:04:07</td>\n",
+              "      <td>So while the \"Last guy\" was on TV saying Covid...</td>\n",
+              "      <td>Deemoney521</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['CovidVaccine']</td>\n",
+              "      <td>Unknown</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2021-03-16 17:03:48</td>\n",
+              "      <td>A year of so much sacrifice and loss, but now....</td>\n",
+              "      <td>lilkioko</td>\n",
+              "      <td>Chicago</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>['vaccinated', 'ScienceRocks']</td>\n",
+              "      <td>United States</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9995</th>\n",
+              "      <td>2021-03-14 09:17:35</td>\n",
+              "      <td>#Marr @Channel4News @SkyNews \\n\\nThink you're ...</td>\n",
+              "      <td>WaronSpeech</td>\n",
+              "      <td>uk</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>['Marr', 'GAVI', 'vaccines', 'billgates', 'COV...</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9996</th>\n",
+              "      <td>2021-03-14 09:17:34</td>\n",
+              "      <td>#Marr @Channel4News @SkyNews \\n\\nThink you're ...</td>\n",
+              "      <td>WaronSpeech</td>\n",
+              "      <td>uk</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>['Marr', 'GAVI', 'vaccines', 'billgates', 'COV...</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9997</th>\n",
+              "      <td>2021-03-14 09:17:34</td>\n",
+              "      <td>#Marr think you're clever\\nhttps://t.co/EbQ79s...</td>\n",
+              "      <td>WaronSpeech</td>\n",
+              "      <td>uk</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>['Marr', 'GAVI', 'vaccines', 'billgates', 'COV...</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9998</th>\n",
+              "      <td>2021-03-14 09:17:32</td>\n",
+              "      <td>Interactable #heatmap showing number of new #C...</td>\n",
+              "      <td>hangangmagazine</td>\n",
+              "      <td>Seoul</td>\n",
+              "      <td>South Korea</td>\n",
+              "      <td>['heatmap', 'COVIDVaccinations', 'Korea', 'cor...</td>\n",
+              "      <td>South Korea</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9999</th>\n",
+              "      <td>2021-03-14 09:17:16</td>\n",
+              "      <td>Undisputed middleweight champion Marvelous Mar...</td>\n",
+              "      <td>HPVSideEffects</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['vaccinated']</td>\n",
+              "      <td>Unknown</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>10000 rows × 7 columns</p>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "0      United States\n",
-              "1            Unknown\n",
-              "2            Unknown\n",
-              "3     United Kingdom\n",
-              "4             Canada\n",
-              "5      United States\n",
-              "6      United States\n",
-              "7             Guyana\n",
-              "8      United States\n",
-              "9      United States\n",
-              "10           Unknown\n",
-              "11    United Kingdom\n",
-              "12             India\n",
-              "13    United Kingdom\n",
-              "14           Unknown\n",
-              "15           Germany\n",
-              "16    United Kingdom\n",
-              "17            Canada\n",
-              "18           Unknown\n",
-              "19     United States\n",
-              "20    United Kingdom\n",
-              "21           Unknown\n",
-              "22     United States\n",
-              "23              Iran\n",
-              "24     United States\n",
-              "Name: Country, dtype: object"
+              "                TweetDate  ...         Country\n",
+              "0     2021-03-16 17:04:39  ...         Unknown\n",
+              "1     2021-03-16 17:04:27  ...  United Kingdom\n",
+              "2     2021-03-16 17:04:18  ...  United Kingdom\n",
+              "3     2021-03-16 17:04:07  ...         Unknown\n",
+              "4     2021-03-16 17:03:48  ...   United States\n",
+              "...                   ...  ...             ...\n",
+              "9995  2021-03-14 09:17:35  ...  United Kingdom\n",
+              "9996  2021-03-14 09:17:34  ...  United Kingdom\n",
+              "9997  2021-03-14 09:17:34  ...  United Kingdom\n",
+              "9998  2021-03-14 09:17:32  ...     South Korea\n",
+              "9999  2021-03-14 09:17:16  ...         Unknown\n",
+              "\n",
+              "[10000 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 41
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZGJfaKS_bdwd"
+      },
+      "source": [
+        "df.to_csv('CovidVaccineWorldWide.csv')"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
