--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -6,7 +6,6 @@
       "name": "Extraction_Of_Tweets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPwPieKNZYqFq6RZLellj+m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,7 @@
       "source": [
         "!pip install tweepy\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,13 +86,14 @@
         "        for tweet in tweepy.Cursor(api.search, q=hashtag+' -filter:retweets', lang=\"en\", since = \"2021-02-15\", until = \"2021-03-18\", tweet_mode='extended').items(10000):\n",
         "          w.writerow([tweet.created_at, tweet.full_text, tweet.user.screen_name,tweet.user.location, [e['text'] for e in tweet._json['entities']['hashtags']]])\n",
         "\n",
-        "api_key = \"LWAwiozllWz2MqKiLkitRY29Z\"\n",
-        "api_secret = \"ZYUd2pBA3SFCfSmEoZG28aNai5wyBcsg8gQesPVSZNYY7b2cgh\"\n",
-        "access_token = \"1370408290035793925-jSLJax1J9Sf9QjEeNZIbDgvNi8kqEr\"\n",
-        "access_secret = \"FKope4qIMtdqGKEZnwlVTV6OtBvpKav3xCXphvp2JrQEC\"\n",
+        "api_key = getpass.getpass('Enter twitter consumer api key :  ')\n",
+        "api_secret = getpass.getpass('Enter twitter consumer api secret key :  ')\n",
+        "access_token = getpass.getpass('Enter twitter access token  :  ')\n",
+        "access_secret = getpass.getpass('Enter twitter access secret token :  ')\n",
+        "    \n",
         "scraping_twitter(api_key, api_secret, access_token, access_secret)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "tweets = pd.read_csv(\"CovidVaccine.csv\")\n",
         "tweets"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
