--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -99,20 +99,34 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XbeTYCudob1m",
+        "outputId": "c723acbb-d1fd-42e6-c9b1-7f47709dde65",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 708
-        },
-        "id": "rgDmBYXeABCN",
-        "outputId": "b68be3aa-4a5d-4b52-b28d-f1c063583534"
+          "height": 589
+        }
       },
       "source": [
-        "#Saving the twitter data to a csv file\n",
+        "\n",
+        "# Since twitter is limited to return 10000 records per one user API request. Three differnt files has been generated\n",
+        "# to populate 25000 records of data using above functions and renaming files as #CovidVaccine1.csv, #CovidVaccine2.csv, #CovidVaccine3.csv\n",
+        "# Concatinating them to one single file as #CovidVaccine.csv\n",
+        "\n",
+        "import os\n",
+        "import glob\n",
         "import pandas as pd\n",
-        "tweets = pd.read_csv(\"CovidVaccine.csv\")\n",
-        "tweets"
+        "os.chdir(\"/content\")\n",
+        "\n",
+        "extension = 'csv'\n",
+        "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
+        "\n",
+        "#combine all files in the list\n",
+        "dataFrame = pd.concat([pd.read_csv(f) for f in all_filenames ])\n",
+        "#export to csv\n",
+        "dataFrame.to_csv( \"CovidVaccine.csv\", index=False, encoding='utf-8-sig')\n",
+        "dataFrame\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,47 +208,47 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9995</th>\n",
-              "      <td>2021-03-16 04:55:54</td>\n",
-              "      <td>#CovidVaccine #AstraZeneca #Pfizervaccine #Mod...</td>\n",
-              "      <td>teepeecariad</td>\n",
-              "      <td>Hampstead London</td>\n",
-              "      <td>['CovidVaccine', 'AstraZeneca', 'Pfizervaccine...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9996</th>\n",
-              "      <td>2021-03-16 04:55:40</td>\n",
-              "      <td>Both doses of #COVID19Vaccination complete AH....</td>\n",
-              "      <td>shameel_shafqat</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>['COVID19Vaccination', 'FinalYear', 'CovidVacc...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9997</th>\n",
-              "      <td>2021-03-16 04:55:32</td>\n",
-              "      <td>@Lirularuloru @MikaelJungner Making #Mask-Wear...</td>\n",
-              "      <td>rauno_varis</td>\n",
-              "      <td>Helsinki, Suomi</td>\n",
-              "      <td>['Mask', 'korona', 'maskipakko', 'maski', 'mas...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9998</th>\n",
-              "      <td>2021-03-16 04:55:27</td>\n",
-              "      <td>Neither did my chills nor joint pain come toge...</td>\n",
-              "      <td>SchiffFT</td>\n",
-              "      <td>Brooklyn, New York</td>\n",
+              "      <td>2021-03-12 12:50:29</td>\n",
+              "      <td>@abc7newsbayarea #CovidVaccine ...of course th...</td>\n",
+              "      <td>chelseazago</td>\n",
+              "      <td>Communist Canada</td>\n",
               "      <td>['CovidVaccine']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
+              "      <th>9996</th>\n",
+              "      <td>2021-03-12 12:50:21</td>\n",
+              "      <td>Got myshot. Excited!!  #vaccinated #VirusCoron...</td>\n",
+              "      <td>gpickner</td>\n",
+              "      <td>Pierre, SD</td>\n",
+              "      <td>['vaccinated', 'VirusCoronashot']</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9997</th>\n",
+              "      <td>2021-03-12 12:50:05</td>\n",
+              "      <td>#Mozambique launches its #Covid19vaccine progr...</td>\n",
+              "      <td>ARCBriefing</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['Mozambique', 'Covid19vaccine', 'ARCBriefing']</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9998</th>\n",
+              "      <td>2021-03-12 12:50:03</td>\n",
+              "      <td>#COVID19Vaccine: Karnataka CM B S Yediyurappa ...</td>\n",
+              "      <td>TheDailyPioneer</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['COVID19Vaccine', 'BSYediyurappa', 'Karnataka...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>9999</th>\n",
-              "      <td>2021-03-16 04:54:44</td>\n",
-              "      <td>AstraZeneca vaccine suspension: A serious setb...</td>\n",
-              "      <td>darkavenger12a</td>\n",
-              "      <td>England</td>\n",
-              "      <td>['EU', 'EU', 'ireland', 'covidvaccine', 'covid...</td>\n",
+              "      <td>2021-03-12 12:49:58</td>\n",
+              "      <td>Time for a full investigation into Ron DeSanti...</td>\n",
+              "      <td>Osceola_DEC</td>\n",
+              "      <td>Osceola County, Florida</td>\n",
+              "      <td>['CovidVaccine', 'DisgracefulDesantis']</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>10000 rows × 5 columns</p>\n",
+              "<p>26249 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -245,19 +259,19 @@
               "3     2021-03-17 23:58:03  ...                ['LiarsNParasites', 'CovidVaccine']\n",
               "4     2021-03-17 23:57:37  ...                   ['FiresideChat', 'CovidVaccine']\n",
               "...                   ...  ...                                                ...\n",
-              "9995  2021-03-16 04:55:54  ...  ['CovidVaccine', 'AstraZeneca', 'Pfizervaccine...\n",
-              "9996  2021-03-16 04:55:40  ...  ['COVID19Vaccination', 'FinalYear', 'CovidVacc...\n",
-              "9997  2021-03-16 04:55:32  ...  ['Mask', 'korona', 'maskipakko', 'maski', 'mas...\n",
-              "9998  2021-03-16 04:55:27  ...                                   ['CovidVaccine']\n",
-              "9999  2021-03-16 04:54:44  ...  ['EU', 'EU', 'ireland', 'covidvaccine', 'covid...\n",
+              "9995  2021-03-12 12:50:29  ...                                   ['CovidVaccine']\n",
+              "9996  2021-03-12 12:50:21  ...                  ['vaccinated', 'VirusCoronashot']\n",
+              "9997  2021-03-12 12:50:05  ...    ['Mozambique', 'Covid19vaccine', 'ARCBriefing']\n",
+              "9998  2021-03-12 12:50:03  ...  ['COVID19Vaccine', 'BSYediyurappa', 'Karnataka...\n",
+              "9999  2021-03-12 12:49:58  ...            ['CovidVaccine', 'DisgracefulDesantis']\n",
               "\n",
-              "[10000 rows x 5 columns]"
+              "[26249 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 1
         }
       ]
     }
