--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -99,12 +99,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XbeTYCudob1m",
-        "outputId": "c723acbb-d1fd-42e6-c9b1-7f47709dde65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 589
-        }
+        },
+        "id": "XbeTYCudob1m",
+        "outputId": "4e242923-a5dd-4a37-e313-6a4e94670d77"
       },
       "source": [
         "\n",
@@ -115,7 +115,7 @@
         "import os\n",
         "import glob\n",
         "import pandas as pd\n",
-        "os.chdir(\"/content\")\n",
+        "os.chdir(\"/content/InputDataFiles\")\n",
         "\n",
         "extension = 'csv'\n",
         "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
@@ -126,7 +126,7 @@
         "dataFrame.to_csv( \"CovidVaccine.csv\", index=False, encoding='utf-8-sig')\n",
         "dataFrame\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     }
